feat: started work on the web navbar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JP Portfolio</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JP Portfolio</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <ul class="navbar-list">
+        <li class="navbar-item">
+          <a href="">JP.</a>
+          <p>Home</p>
+        </li>
+        <li class="navbar-item">
+          <a href="">About</a>
+          <p>What I do</p>
+        </li>
+        <li class="navbar-item">
+          <a href="">Portfolio</a>
+          <p>See my works</p>
+        </li>
+        <li class="navbar-item">
+          <a href="">Other</a>
+          <p>More about me </p>
+        </li>
+        <li class="navbar-item">
+          <a href=""> Say Hello</a>
+          <p>Get in touch</p>
+        </li>
+      </ul>
+    </nav>
+
+    <script src="script.js"></script>
+  </body>
 </html>
