fix: finished web navbar transitions

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
           <nav class="navbar">
             <ul class="navbar-list">
               <li class="navbar-item">
-                <a href="">JP.</a>
+                <a href="#home">JP.</a>
                 <p>home</p>
               </li>
               <li class="navbar-item">
-                <a href="">About</a>
+                <a href="#about">About</a>
                 <p>what i do</p>
               </li>
               <li class="navbar-item">
-                <a href="">Portfolio</a>
+                <a href="#portfolio">Portfolio</a>
                 <p>see my works</p>
               </li>
               <li class="navbar-item">
-                <a href="">Other</a>
+                <a href="#other">Other</a>
                 <p>more about me</p>
               </li>
               <li class="navbar-item">
-                <a href=""> Say Hello</a>
+                <a href="#contact"> Say Hello</a>
                 <p>get in touch</p>
               </li>
             </ul>
@@ -48,7 +48,7 @@
         </header>
 
         <!--Main Content-->
-        <main class="main">
+        <main class="main" id="home">
           <div class="main-first">
             <div></div>
             <p>Hello World</p>
@@ -66,6 +66,12 @@
           </div>
         </main>
       </section>
+      <section id="about">
+       
+      </section>
+      <section id="portfolio">Portfolio</section>
+      <section id="other">Other</section>
+      <section id="contact">Contact</section>
     </div>
 
     <script src="script.js"></script>
