feat: working on about section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Abel&family=Lexend:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Abel&family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
@@ -66,8 +66,24 @@
           </div>
         </main>
       </section>
-      <section id="about">
-       
+      <section class="about" id="about">
+        <div class="about-image">
+          <img src="./assets/about.jpeg" alt="Iamge of John Paul">
+        </div>
+        <div class="about-description">
+          <div class="about-description-heading" >
+            <div></div>
+            <p>About</p>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+          <div class="about-description-button">
+            <button>
+              <span>Download CV</span>
+              </button>
+          </div>
+        </div>
       </section>
       <section id="portfolio">Portfolio</section>
       <section id="other">Other</section>
