fix: finished with the about section

--- a/index.html
+++ b/index.html
@@ -64,27 +64,119 @@
               </span>
             </h1>
           </div>
+
+          <ul class="main-socials">
+            <li><a href="/twitter">Twitter</a></li>
+            <li><a href="/facebook">Facebook</a></li>
+            <li><a href="/linkedin">LinkedIn</a></li>
+            <li><a href="/Instagram">Instagram</a></li>
+          </ul>
         </main>
       </section>
-      <section class="about" id="about">
-        <div class="about-image">
-          <img src="./assets/about.jpeg" alt="Iamge of John Paul">
-        </div>
-        <div class="about-description">
-          <div class="about-description-heading" >
-            <div></div>
-            <p>About</p>
+      <section id="about">
+        <section class="about-main">
+          <div class="about-image">
+            <img src="./assets/about.jpeg" alt="Iamge of John Paul" />
           </div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          </p>
-          <div class="about-description-button">
-            <button>
-              <span>Download CV</span>
+          <div class="about-description">
+            <div class="about-description-heading">
+              <div></div>
+              <p>About</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur.
+            </p>
+            <div class="about-description-button">
+              <button>
+                <span>Download CV</span>
               </button>
+            </div>
           </div>
-        </div>
+        </section>
+        <section class="about-expertise">
+          <div class="about-expertise-heading">Expertise</div>
+          <div class="about-expertise-description">
+            <h2>
+              Software Development, Mobile Apps Development, Digital Marketing,
+              Branding
+            </h2>
+          </div>
+          <div class="about-expertise-list">
+            <div class="expertise-item">
+              <h2 class="expertise-title">Experience</h2>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">Dropbox</h3>
+                  <p class="role">Product Designer</p>
+                  <p class="date">August 2019 - Present</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">Microsoft</h3>
+                  <p class="role">Frontend Developer</p>
+                  <p class="date">August 2016 - July 2019</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="expertise-item">
+              <h2 class="expertise-title">Education</h2>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">University of Life</h3>
+                  <p class="role">Master in Software Development</p>
+                  <p class="date">August 2019 - Present</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+              <div class="job">
+                <div class="bullet"></div>
+                <div class="job-details">
+                  <h3 class="company-name">School of Cool Designers</h3>
+                  <p class="role">B.A. Degree in Graphic Design</p>
+                  <p class="date">August 2016 - July 2019</p>
+                  <p class="description">
+                    Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in
+                    magna consectetur nisi cupidatat laboris esse eiusmod
+                    deserunt aute do quis velit esse sed Ut proident cupidatat
+                    nulla esse cillum laborum occaecat nostrud sit dolor
+                    incidunt amet est occaecat nisi.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
+
       <section id="portfolio">Portfolio</section>
       <section id="other">Other</section>
       <section id="contact">Contact</section>
