feat: portfolio section in progress
- added animations to the project.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Abel&family=Lexend:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=DM+Serif+Display:ital@0;1&family=Lexend+Deca:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
@@ -102,7 +102,7 @@
           <div class="about-expertise-heading">Expertise</div>
           <div class="about-expertise-description">
             <h2>
-              Software Development, Mobile Apps Development, Digital Marketing,
+              Software Development, Mobile App Development, Digital Marketing,
               Branding
             </h2>
           </div>
@@ -177,7 +177,34 @@
         </section>
       </section>
 
-      <section id="portfolio">Portfolio</section>
+      <section class="portfolio" id="portfolio">
+        <section class="portfolio-intro">
+          <div class="intro-port">
+            <p class="intro-port-heading">Port</p>
+            <p class="intro-port-text">
+              Projects that you<br />
+              might want <br />
+              to see
+            </p>
+          </div>
+          <div></div>
+          <div class="intro-folio">
+            <div class="intro-folio-text">
+              Not all of them<br />
+              but those<br />
+              worth to see
+            </div>
+            <div class="intro-folio-heading">Folio</div>
+          </div>
+        </section>
+
+        <section class="portfolio-main">
+          <p class="portfolio-main-heading">
+            Here are some of my favourite projects I have done lately.<br />
+            Feel free to check them out.
+          </p>
+        </section>
+      </section>
       <section id="other">Other</section>
       <section id="contact">Contact</section>
     </div>
