feat: work on the contact section for webview

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=DM+Serif+Display:ital@0;1&family=Lexend+Deca:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link href="./fontawesome/css/fontawesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./fontawesome/css/all.css" />
+    <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="loader">
@@ -187,7 +189,9 @@
               to see
             </p>
           </div>
-          <div></div>
+          <div class="intro-middle">
+            <i class="fa-solid fa-briefcase fa-2xl" style="color: #eabd7c;"></i>
+          </div>
           <div class="intro-folio">
             <div class="intro-folio-text">
               Not all of them<br />
@@ -203,10 +207,142 @@
             Here are some of my favourite projects I have done lately.<br />
             Feel free to check them out.
           </p>
+          <div class="projects-container">
+            <div class="project-card" data-project="retro-camera">
+              <div class="project-image-container">
+                <img
+                  src="./assets/about-us-hero-img.webp"
+                  alt="Retro Camera"
+                  class="project-image"
+                />
+                <div class="image-overlay">
+                  <div class="plus-icon"></div>
+                </div>
+              </div>
+              <div class="project-content">
+                <div class="project-type">Website</div>
+                <div class="project-title">Retro Camera.</div>
+                <div class="external-icon">
+                  <i
+                    class="fa-solid fa-arrow-right-long fa-rotate-by"
+                    style="color: #fff; --fa-rotate-angle: -45deg"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="project-card" data-project="retro-camera">
+              <div class="project-image-container">
+                <img
+                  src="./assets/about-us-hero-img.webp"
+                  alt="Retro Camera"
+                  class="project-image"
+                />
+                <div class="image-overlay">
+                  <div class="plus-icon"></div>
+                </div>
+              </div>
+              <div class="project-content">
+                <div class="project-type">Website</div>
+                <div class="project-title">Retro Camera.</div>
+                <div class="external-icon">
+                  <i
+                    class="fa-solid fa-arrow-right-long fa-rotate-by"
+                    style="color: #fff; --fa-rotate-angle: -45deg"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="project-card" data-project="retro-camera">
+              <div class="project-image-container">
+                <img
+                  src="./assets/about-us-hero-img.webp"
+                  alt="Retro Camera"
+                  class="project-image"
+                />
+                <div class="image-overlay">
+                  <div class="plus-icon"></div>
+                </div>
+              </div>
+              <div class="project-content">
+                <div class="project-type">Website</div>
+                <div class="project-title">Retro Camera.</div>
+                <div class="external-icon">
+                  <i
+                    class="fa-solid fa-arrow-right-long fa-rotate-by"
+                    style="color: #fff; --fa-rotate-angle: -45deg"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="project-card" data-project="retro-camera">
+              <div class="project-image-container">
+                <img
+                  src="./assets/about-us-hero-img.webp"
+                  alt="Retro Camera"
+                  class="project-image"
+                />
+                <div class="image-overlay">
+                  <div class="plus-icon"></div>
+                </div>
+              </div>
+              <div class="project-content">
+                <div class="project-type">Website</div>
+                <div class="project-title">Retro Camera.</div>
+                <div class="external-icon">
+                  <i
+                    class="fa-solid fa-arrow-right-long fa-rotate-by"
+                    style="color: #fff; --fa-rotate-angle: -45deg"
+                  ></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </section>
       <section id="other">Other</section>
-      <section id="contact">Contact</section>
+      <section class="contact" id="contact">
+        <div class="contact-first">
+          <p>Get in touch</p>
+        </div>
+        <div class="contact-second">
+          <p>
+            I love to hear from you. Whether you have a question or just want to
+            chat about marketing, tech & art — shoot me a message.
+          </p>
+        </div>
+        <div class="contact-third">
+          <div class="contact-third-contact">
+            <p>reach me at</p>
+            <div>
+              <p>sayhello@jonpaul.com</p>
+              <p>+234123456789</p>
+            </div>
+          </div>
+          <div class="contact-third-socials">
+            <p>socials</p>
+            <div>
+              <p>
+                <a href="">Twitter</a>, <a href="">Instagram</a>,
+                <a href="">Facebook</a>, <a href="">GitHub</a>
+              </p>
+            </div>
+          </div>
+          <div class="contact-third-button">
+            <a href="mailto:jonpaul@gmail.com">
+              <button>
+                <span>say hello</span>
+              </button>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="copyright" id="contact">
+        <div>
+          <p>&copy; Copyright Edozie 2025</p>
+        </div>
+
+      </section>
     </div>
 
     <script src="script.js"></script>
