feat: web view finished

--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
             Here are some of my favourite projects I have done lately.<br />
             Feel free to check them out.
           </p>
-          <div class="projects-container">
-          </div>
+          <div class="projects-container"></div>
+
+          <div class="slider"></div>
+          <div class="dots"></div>
         </section>
       </section>
 
@@ -222,21 +224,118 @@
           <p>who am i?</p>
         </div>
         <div class="other-text">
-          <div class="other-text-intro">
+          <div class="text-container">
             <p>
-              I’m John Paul, a proud Nigerian living in Enugu, Nigeria, working
-              as a digital marketer and software developer.
+              Hi, I’m John Paul — a proud Nigerian based in Enugu, where I
+              balance life between lines of code and creative campaigns. But
+              there’s more to me than just pixels and performance metrics.
             </p>
-            <img src="" alt="" />
+            <p>
+              When I’m not deep into digital strategy or debugging code, you’ll
+              find me exploring the vibrant culture around me, listening to
+              soul-stirring music, or diving into thoughtful conversations about
+              faith, technology, football and the future of Africa.
+            </p>
+            <p>
+              Whether it’s mentoring aspiring creatives, journaling life
+              lessons, or helping friends launch their own ideas, I try to live
+              with intention and heart. This space is a glimpse into the values,
+              moments, and hobbies that shape me — beyond the screen.
+            </p>
           </div>
-          <div class="other-text-description">
-            <img src="" alt="" />
-            <p>
-              You may be familiar with my projects, but I’d love to give you a
-              glimpse into the person behind the code and campaigns.
-            </p>
+          <div class="image-container">
+            <img
+              src="./assets/about-us-hero-img.webp"
+              alt="Image 1"
+              class="slideshow-img active"
+            />
+            <img src="./assets/about.jpeg" alt="" class="slideshow-img" />
+            <img src="./assets/ceo_image.jpg" alt="" class="slideshow-img" />
           </div>
         </div>
+
+        <section>
+          <section id="semi-circles-section" class="semi-circles-container">
+            <div class="semi-circle circle-1"><span>1</span></div>
+            <div class="semi-circle circle-2"><span>2</span></div>
+            <div class="semi-circle circle-3"><span>3</span></div>
+            <div class="semi-circle circle-4"><span>4</span></div>
+            <div class="semi-circle circle-5"><span>5</span></div>
+            <div class="base"></div>
+          </section>
+          <section class="interests">
+            <div>
+              <div class="interests-heading">
+                <span class="interests-heading-number">1.</span>
+                <p class="interests-heading-text">Faith</p>
+              </div>
+              <div class="interests-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
+                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
+                  aperiam hic delectus facilis temporibus, deleniti atque.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="interests-heading">
+                <span class="interests-heading-number">2.</span>
+                <p class="interests-heading-text">Family</p>
+              </div>
+              <div class="interests-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
+                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
+                  aperiam hic delectus facilis temporibus, deleniti atque.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="interests-heading">
+                <span class="interests-heading-number">3.</span>
+                <p class="interests-heading-text">Health</p>
+              </div>
+              <div class="interests-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
+                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
+                  aperiam hic delectus facilis temporibus, deleniti atque.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="interests-heading">
+                <span class="interests-heading-number">4.</span>
+                <p class="interests-heading-text">Profession</p>
+              </div>
+              <div class="interests-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
+                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
+                  aperiam hic delectus facilis temporibus, deleniti atque.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="interests-heading">
+                <span class="interests-heading-number">5.</span>
+                <p class="interests-heading-text">Football</p>
+              </div>
+              <div class="interests-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime, deleniti? Ab saepe laudantium et corrupti ipsam?
+                  Recusandae autem obcaecati eius culpa perspiciatis expedita,
+                  aperiam hic delectus facilis temporibus, deleniti atque.
+                </p>
+              </div>
+            </div>
+          </section>
+        </section>
       </section>
 
       <!--Contact Section-->
